RESOLVED FIXED23197
Delay creating the PCVector until an exception is thrown
https://bugs.webkit.org/show_bug.cgi?id=23197
Summary Delay creating the PCVector until an exception is thrown
Sam Weinig
Reported 2009-01-08 14:38:12 PST
Delaying the creation of the PCVector until an exception is thrown will save about 2MB on membuster head. This will require re-JITing to build the offset mappings.
Attachments
Sam Weinig
Comment 1 2009-01-08 14:38:44 PST
Sam Weinig
Comment 2 2009-01-08 14:53:29 PST
Patch reviewed by Oliver Hunt and landed in r39720.
Note You need to log in before you can comment on or make changes to this bug.